# thearning-backend

./: .env  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  secrets
.github/workflows/: build-ayaya.yml  build-emotional-scraper.yml  build.yml
ayaya/: Cargo.toml  README.md
ayaya/src/: errors.rs  lib.rs
emotional-scraper/: Cargo.toml  README.md
emotional-scraper/src/: data.rs  lib.rs
kosuzers/: Cargo.toml  README.md
kosuzers/src/: lib.rs
migrations/2022-01-26-160043_users/: up.sql
migrations/2022-02-02-153218_classes/: up.sql
migrations/2022-02-02-153221_students/: up.sql
migrations/2022-02-03-073712_assignments/: up.sql
migrations/2022-02-03-073716_submissions/: up.sql
migrations/2022-02-08-234445_teachers/: down.sql  up.sql
migrations/2022-02-14-130600_files/: down.sql  up.sql
migrations/2022-02-14-130605_attachments/: down.sql  up.sql
migrations/2022-02-21-114113_admins/: up.sql
migrations/2022-03-27-142200_files/: up.sql
migrations/2022-03-27-142202_links/: up.sql
migrations/2022-03-27-142203_users/: up.sql
migrations/2022-03-27-142206_classes/: down.sql  up.sql
migrations/2022-03-27-142208_teachers/: up.sql
migrations/2022-03-27-142214_students/: up.sql
migrations/2022-03-27-142217_admins/: down.sql  up.sql
migrations/2022-03-27-142235_topics/: up.sql
migrations/2022-03-27-142353_assignments/: down.sql  up.sql
migrations/2022-03-27-142355_submissions/: up.sql
migrations/2022-03-27-142358_attachments/: up.sql
migrations/2022-04-09-114325_announcements/: down.sql  up.sql
migrations/2022-04-09-114332_attachments/: up.sql
migrations/2022-04-09-165532_comments/: up.sql
migrations/2022-04-09-165536_private_comments/: down.sql  up.sql
migrations/2022-05-16-112259_marks/: down.sql  up.sql
scrape-scrape/: Cargo.toml
scrape-scrape/src/: data.rs  lib.rs
scripts/: migrate.sh
src/: auth.rs  catchers.rs  db.rs  errors.rs  main.rs  pagination.rs  schema.rs  test.rs  tests.rs  traits.rs  utils.rs
src/announcements/: models.rs  routes.rs
src/assignments/: mod.rs  models.rs  routes.rs  utils.rs
src/attachments/: models.rs  routes.rs
src/classes/: mod.rs  models.rs  routes.rs  utils.rs
src/comments/: models.rs  routes.rs
src/files/: mod.rs  models.rs  routes.rs  utils.rs
src/links/: models.rs  routes.rs
src/submissions/: models.rs  routes.rs
src/users/: mod.rs  models.rs  routes.rs  (+1 more)
