[package]
name = "thearning-backend"
version = "0.1.0"
authors = ["Rahman Hakim <rahmanhakim2435@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrape-scrape = { path = "scrape-scrape", version = "0.1.0"}
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
rocket-multipart-form-data = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.3"
jsonwebtoken = "7"
rust-crypto = "0.2"
rustc-serialize = "0.3"
bcrypt = "0.8"
rand = "0.8.4"
hmac = "0.12.0"
sha2 = "0.10.1"
rocket_cors = "0.6.0-alpha1"
chrono = { version = "0.4.19", features=["serde"] }