[package]
name = "ayaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["macros", "rt"] }
lettre = { version = "0.10.0-rc.6", features = ["tokio1", "tokio1-native-tls"] }
tracing-subscriber = "0.2.10"


