[package]
name = "scrape-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = "0.11.10"
serde = { version = "1.0", features = ["derive"] }
select = "0.5.0"
tokio = { version = "1.18.1", features = ["macros"] }